@@ -18,6 +18,8 @@ Improvements
 Bugfixes
 --------
  - Fix `pkg-config` (setup.py) for Python 3.9 on Debian. Thanks to Marco Sulla PR #792.
+ - Fix ROFileNode fails to return the fileno() (:issue:`633`).
+
 
 Changes from 3.6.0 to 3.6.1
 ===========================
